# maid-sweeprs

./: Cargo.toml  README.md  maidsweep.yaml  patterns.yaml
src/: context.rs  dispatcher.rs  maid.rs  main.rs  patterns.rs
