[package]
name = "maid-sweepers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
mongodb = "2.5.0"
futures = { version = "0.3", features = ["executor", "thread-pool"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.5"
lazy_static = "1.4"
clap = { version = "4.2.7", features = ["derive"] }
once_cell = "1.17.1"
