[package]
name = "maid-sweeprs"
version = "0.5.0"
edition = "2021"
authors = ["noirgif <nomaru@outlook.com>"]
description = "Call a maid to label old files and sweep them under the rug."
readme = "README.md"
repository = "https://github.com/noirgif/maid-sweeprs/"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
mongodb = "2.5.0"
futures = { version = "0.3", features = ["executor", "thread-pool"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.5"
lazy_static = "1.4"
clap = { version = "4.2.7", features = ["derive"] }
once_cell = "1.17.1"
dirs = "5.0.1"

[[bin]]
name = "maid"
